--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,4 +29,20 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+/* styles/globals.css */
+
+
+main {
+  flex: 1;
+  /* Make the main content take up the available space */
+}
+
+footer {
+  margin-top: auto;
+  /* Push the footer to the bottom */
 }
